# Dioxus-v0.6

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json  tailwind.config.js
src/: app.rs  lib.rs  main.css  main.rs
src/components/: mod.rs  navigation_bar.rs
src/pages/: home_page.rs
src/styles/: mod.rs  navigation_bar_style.rs
